--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -24,6 +24,7 @@
             font_size: 15
 			multiline: False
 			size_hint: (0.4, 0.5)
+			write_tab: False
 				
 		TextInput:
 			id: userPassword
@@ -35,6 +36,7 @@
 			multiline: False
 			password: True
 			size_hint: 0.4, 0.5
+			write_tab: False
 			
 		Button:
 			pos_hint:{"x":0.2,"y":0.05}
