fixed errors in signup.py and finished gathering all necessary information from user via gui

--- a/application/src/kv/signup.kv
+++ b/application/src/kv/signup.kv
@@ -19,6 +19,16 @@
 			padding: [20, 30, 40, 50]
 
 		TextInput:
+			id: name
+			hint_text: "Enter Your Name"
+			max_lines: 1
+			valign: 'middle'
+            halign: 'center'
+            font_size: 15
+			multiline: False
+			size_hint: (0.4, 0.5)
+
+		TextInput:
 			id: userEmail
             hint_text: "Enter E-mail"
             max_lines: 1
@@ -27,6 +37,16 @@
             font_size: 15
 			multiline: False
 			pos_hint: {"x": 0.45 , "top":0.9}
+			size_hint: (0.4, 0.5)
+
+		TextInput:
+			id: phone
+			hint_text: "Enter Phone Number"
+			max_lines: 1
+			valign: 'middle'
+            halign: 'center'
+            font_size: 15
+			multiline: False
 			size_hint: (0.4, 0.5)
 
 		TextInput:
