added spinner for measurement in add item and tied it to which measurement system user has set in settings

--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -38,11 +38,13 @@
                 id: imperial
                 text: 'Imperial'
                 group: 'measurements'
+                allow_no_selection: False
                 
             ToggleButton:
                 id: metric
                 text: 'Metric'
                 group: 'measurements'
+                allow_no_selection: False
            
 <ManagePL>:                                                            
 	BoxLayout:
