finish implementing measurement changing via profile settings

--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -25,26 +25,42 @@
 		Image:
 			source: "graphics/generalbackground.png"
     GridLayout:
-		cols:2
-		padding: [30]
-		spacing: [5, 5]
-        
-        Label:
-            text: 'Measurement Values'
-            
+        cols:1
         GridLayout:
             cols:2
-            ToggleButton:
-                id: imperial
-                text: 'Imperial'
-                group: 'measurements'
-                allow_no_selection: False
+            padding: [30]
+            spacing: [5, 5]
+            size_hint_y: 0.5
+            
+            Label:
+                text: 'Measurement Values'
                 
-            ToggleButton:
-                id: metric
-                text: 'Metric'
-                group: 'measurements'
-                allow_no_selection: False
+            GridLayout:
+                cols:2
+                ToggleButton:
+                    id: imperial
+                    text: 'Imperial'
+                    group: 'measurements'
+                    allow_no_selection: False
+                    
+                ToggleButton:
+                    id: metric
+                    text: 'Metric'
+                    group: 'measurements'
+                    allow_no_selection: False
+        GridLayout:
+            cols:2
+            padding: [30]
+            spacing: [5, 5]
+            default_row_height: 50
+            size_hint_y: 0.5
+            
+            Button:
+                text: 'Submit'
+                on_press: root.updateMeasurement()
+            Button:
+                text: 'Back'
+                on_press: root.manager.current = 'profile'
            
 <ManagePL>:                                                            
 	BoxLayout:
