--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -24,58 +24,74 @@
     FloatLayout:
 		Image:
 			source: "graphics/generalbackground.png"
-    ScrollView:
-        do_scroll_x: False
-		do_scroll_y: True
+    GridLayout:
+        cols:1
         GridLayout:
-            cols:1
-            size_hint_y: None
-            height: self.minimum_height
+            cols:2
+            pos_hint:{'x': 0.21, 'top': .99}
+            size_hint: (0.58, 0.05)
+                
+            Label:
+                text: 'Measurement Values'
+                    
             GridLayout:
                 cols:2
-                padding: [30]
-                spacing: [5, 5]
+                ToggleButton:
+                    id: imperial
+                    text: 'Imperial'
+                    group: 'measurements'
+                    allow_no_selection: False
+                        
+                ToggleButton:
+                    id: metric
+                    text: 'Metric'
+                    group: 'measurements'
+                    allow_no_selection: False
+        ScrollView:
+            size_hint: (.98, 0.815)
+            pos_hint:{'x': 0.01, 'top': 0.93}
+            padding: [30]
+            GridLayout:
+                cols:1
                 size_hint_y: None
                 height: self.minimum_height
-                
+                default_row_height: 35
+                padding: [30]
                 Label:
-                    text: 'Measurement Values'
+                    text: 'Storage Locations'
                     
                 GridLayout:
-                    cols:2
-                    ToggleButton:
-                        id: imperial
-                        text: 'Imperial'
-                        group: 'measurements'
-                        allow_no_selection: False
-                        
-                    ToggleButton:
-                        id: metric
-                        text: 'Metric'
-                        group: 'measurements'
-                        allow_no_selection: False
-            Label:
-                text: ''
+                    id: locations
+                    cols: 1
+                    size_hint_y: None
+                    height: self.minimum_height
+                    default_row_height: 35
+                    spacing: [40]
                 
-            GridLayout:
-                id: locations
-                cols: 2
-                size_hint_y: None
-                height: self.minimum_height
+                GridLayout:
+                    cols: 2
+                    size_hint_y: None
+                    height: self.minimum_height
+                    spacing: [40]
+                    TextInput:
+                        id: newLoc
                     
-            GridLayout:
-                cols:2
-                padding: [30]
-                spacing: [5, 5]
-                size_hint_y: None
-                height: self.minimum_height
-                
-                Button:
-                    text: 'Submit'
-                    on_press: root.updateMeasurement()
-                Button:
-                    text: 'Back'
-                    on_press: root.manager.current = 'profile'
+                    Button:
+                        text: 'Add Location'
+                        on_press: self.addLocation()
+                    
+        GridLayout:
+            cols:2
+            size_hint_y: 0.33
+            size_hint: (.98, 0.09)
+            pos_hint:{'x': .01, 'top': .105}
+            
+            Button:
+                text: 'Submit'
+                on_press: root.updateMeasurement()
+            Button:
+                text: 'Back'
+                on_press: root.manager.current = 'profile'
            
 <ManagePL>:                                                            
 	BoxLayout:
