--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -10,14 +10,17 @@
 		
 		Button:
             text: 'Manage Perfect Larder'
+            font_size: 65
             on_press: root.manager.current = 'managepl'
             
 		Button:
             text: 'Profile Settings'
+            font_size: 65
             on_press: root.manager.current = 'settings'
             
 		Button:
             text: 'Back To Home'
+            font_size: 65
             on_press: root.manager.current = 'homescreen'
             
 <Settings>:
