--- a/application/src/kv/trends.kv
+++ b/application/src/kv/trends.kv
@@ -3,13 +3,9 @@
 		cols:1
 		size: root.width, root.height
 		
-			
-		Spinner:
-			size_hint: None, None
-			size: 100, 44
-			pos_hint: {'center': (.5, .5)}
-			text: 'January'
-			values: 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'
+		GridLayout:
+			cols:1
+			id : graph
 
 		Button:
 			text: 'Back To Home'
